--- a/src/scss/partials/global/_variables.scss
+++ b/src/scss/partials/global/_variables.scss
@@ -150,7 +150,7 @@ $form-label-color:        $black;
 $form-label-font-size:    $small-font-size;
 $form-label-font-weight:  $global-weight-bold;
 $form-label-line-height:  1.8;
-$select-background:       $gray;
+$select-background:       $body-background;
 $select-triangle-color:   $black;
 $select-radius:           rem-calc($global-radius);
 
