--- a/src/scss/partials/global/_variables.scss
+++ b/src/scss/partials/global/_variables.scss
@@ -22,11 +22,11 @@ $white:                    #fff;
 $black:                    #000;
 
 $xlight-gray:              #f0f0f0;
-$light-gray:               #f0f0f3;
+$light-gray:               #d0d0d0;
 $gray:                     #ccc;
-$medium-gray:              #7e7e7e;
-$dark-gray:                #333;
-$xdark-gray:               #dfe0e1;
+$medium-gray:              #999;
+$dark-gray:                #666;
+$xdark-gray:               #333;
 
 $body-background:          $white;
 $border-color:             $gray;
@@ -60,7 +60,7 @@ $large-down:  0px $large;
 // 3. Base Typography
 // ------------------
 
-$font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
+$font-family-monospace: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 
 $header-font-family: Georgia, serif;
 $header-font-weight: $global-weight-bold;
@@ -72,11 +72,11 @@ $header-margin-bottom:     rem-calc($global-margin);
 $header-text-rendering:    optimizeLegibility;
 $header-small-font-color:  $gray;
 
-$header-1-size: rem-calc($global-font-size + 12);
-$header-2-size: rem-calc($global-font-size + 10);
-$header-3-size: rem-calc($global-font-size + 8);
-$header-4-size: rem-calc($global-font-size + 4);
-$header-5-size: rem-calc($global-font-size + 2);
+$header-1-size: rem-calc($global-font-size + 15);
+$header-2-size: rem-calc($global-font-size + 12);
+$header-3-size: rem-calc($global-font-size + 9);
+$header-4-size: rem-calc($global-font-size + 6);
+$header-5-size: rem-calc($global-font-size + 3);
 $header-6-size: rem-calc($global-font-size);
 
 $xxxlarge-font-size:    $header-1-size;
@@ -94,11 +94,11 @@ $paragraph-lineheight:     $global-lineheight;
 $paragraph-margin-bottom:  rem-calc($global-margin);
 $paragraph-text-rendering: optimizeLegibility;
 
-$code-color:       $body-font-color;
+$code-color:       $xdark-gray;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
-$code-background:  $light-gray;
-$code-border:      rem-calc(1) solid $gray;
+$code-background:  $xlight-gray;
+$code-border:      0;
 $code-padding:     rem-calc(2);
 
 $anchor-color:                 $primary-color;
@@ -119,8 +119,8 @@ $list-nested-side-margin:     1.25rem;
 $defnlist-margin-bottom:      1rem;
 $defnlist-term-weight:        $global-weight-bold;
 $defnlist-term-margin-bottom: 0.3rem;
-$blockquote-color:            $gray;
-$blockquote-padding:          rem-calc($global-padding);
+$blockquote-color:            $dark-gray;
+$blockquote-padding:          rem-calc(0 $global-padding);
 $blockquote-border:           rem-calc(1) solid $gray;
 $cite-font-size:              $small-font-size;
 $cite-color:                  $gray;
@@ -136,9 +136,9 @@ $abbr-underline:              rem-calc(1) dotted $black;
 
 $fieldset-border:         rem-calc(1) solid $gray;
 $fieldset-padding:        rem-calc($global-padding);
-$fieldset-margin:         rem-calc($global-margin);
-$legend-padding:          rem-calc($global-padding);
-$form-spacing:            rem-calc(20px);
+$fieldset-margin:         rem-calc(0 0 $global-margin);
+$legend-padding:          rem-calc(5);
+$form-spacing:            rem-calc(20);
 $helptext-color:          $gray;
 $helptext-font-size:      $small-font-size;
 $helptext-font-style:     italic;
@@ -187,7 +187,7 @@ $label-radius:     rem-calc($global-radius);
 $table-background:         $white;
 $table-color-scale:        5%;
 $table-border:             rem-calc(1) solid smart-scale($table-background, $table-color-scale);
-$table-padding:            rem-calc($global-padding);
+$table-padding:            rem-calc(10);
 $table-hover-scale:        2%;
 $table-row-hover:          darken($table-background, $table-hover-scale);
 $table-row-stripe-hover:   darken($table-background, $table-color-scale + $table-hover-scale);
