--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 // Main Style File
 //
-// Edit this file to add/remove framework and application imports. Once
-// configured, save this file as style.scss without the underscore (_). When
+// Edit this file to add/remove framework and application imports. When
 // compiled, this file gets turned into style.css.
 //
 // This file should really hold nothing except for imports of the framework and
