--- a/src/scss/framework/global/_extendables.scss
+++ b/src/scss/framework/global/_extendables.scss
@@ -23,3 +23,14 @@
     color: $button-color-hover;
   }
 }
+
+%list-inline-block {
+  list-style: none;
+  padding-left: 0;
+  margin-top: rem-calc($global-margin);
+  margin-bottom: rem-calc($global-margin);
+
+  li {
+    display: inline-block;
+  }
+}
