--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,9 @@
 
 /* Application Imports */
 
+// Application functions, mixins, default variables and extendables
+//@import 'application/global/extendables';
+
 // Base imports
 //@import 'application/base/base';
 
