--- a/src/scss/framework/global/_extendables.scss
+++ b/src/scss/framework/global/_extendables.scss
@@ -19,6 +19,7 @@
   padding: rem-calc($button-padding);
   border: $button-border;
   color: $button-color;
+  cursor: pointer;
 
   &:hover {
     background: $button-background-hover;
