--- a/src/scss/framework/global/_extendables.scss
+++ b/src/scss/framework/global/_extendables.scss
@@ -8,7 +8,7 @@
 
 %container {
   width: 100%;
-  max-width: rem-calc($global-width + $global-padding);
+  max-width: rem-calc($global-width + $gutter-padding);
   margin: 0 auto;
   @include clearfix;
 
